welcome.lessons.welcome.methods.picture.PictureMono1.scala.error
PictureMono1:19: error: not found: value nbCotes
nbCotes = 0
^PictureMono1:20: error: not found: value nbCotes
while(nbCotes < 4){
      ^PictureMono1:24: error: not found: value nbCotes
  nbCotes = nbCotes + 1
  ^